<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/txtTitleR"
        android:layout_width="259dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtIngredients"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="27dp"
        android:text="@string/txtIngredient"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleR" />

    <TextView
        android:id="@+id/txtDirection"
        android:layout_width="118dp"
        android:layout_height="37dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="31dp"
        android:text="@string/txtDirection"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="33dp"
        android:text="@string/txtItem2"
        app:layout_constraintBottom_toTopOf="@+id/txtDir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDirection" />

    <TextView
        android:id="@+id/txtDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="267dp"
        android:text="@string/txtDir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="31dp"
        android:text="@string/txtitem1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDirection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

</androidx.constraintlayout.widget.ConstraintLayout>